--- a/character_creation/index.html
+++ b/character_creation/index.html
@@ -14,7 +14,8 @@
     
   </head>
   <body data-spy="scroll" data-target="#sidemenu">
-  
+  <div id="wrap">
+   
 <nav id="site-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
  
 <div class="navbar-header">
@@ -100,16 +101,14 @@
 </div>
 </nav>
 
-  <nav id="sidemenu" class="col-md-3" style="height: 90%; position: fixed;">
-   <ul id="sidemenu-topnav" class="nav" style="overflow-y: auto; height: 85%;">
+    <div class="container">
+       <div class="row">
+            <nav id="sidemenu" class="col-md-3">
+   <ul id="sidemenu-topnav" class="nav">
    </ul>
 </nav>
 
-  <div id="wrap">
-    <div class="container" style="height:100%;">
-       <div class="row" style="height:100%;">
-            
-          <div class="col-md-8 col-md-offset-1">
+          <div class="col-md-6 col-md-offset-1">
              <h1>Character Creation</h1>
 <p class="NoIndent">Making Dungeon World characters is quick and easy. You should all create your first characters together at the beginning of your first session. Character creation is, just like play, a kind of conversation—everyone should be there for it.</p>
 <p>You may need to make another character during play, if yours gets killed for example. If so, no worries, the character creation process helps you make a new character that fits into the group in just a few minutes. All characters, even replacement characters, start at first level.</p>
