--- a/license/index.html
+++ b/license/index.html
@@ -14,7 +14,8 @@
     
   </head>
   <body data-spy="scroll" data-target="#sidemenu">
-  
+  <div id="wrap">
+   
 <nav id="site-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
  
 <div class="navbar-header">
@@ -100,16 +101,14 @@
 </div>
 </nav>
 
-  <nav id="sidemenu" class="col-md-3" style="height: 90%; position: fixed;">
-   <ul id="sidemenu-topnav" class="nav" style="overflow-y: auto; height: 85%;">
+    <div class="container">
+       <div class="row">
+            <nav id="sidemenu" class="col-md-3">
+   <ul id="sidemenu-topnav" class="nav">
    </ul>
 </nav>
 
-  <div id="wrap">
-    <div class="container" style="height:100%;">
-       <div class="row" style="height:100%;">
-            
-          <div class="col-md-8 col-md-offset-1">
+          <div class="col-md-6 col-md-offset-1">
              <h1 id="license">License</h1>
 <p>This work is licensed under the Creative Commons Attribution 3.0 Unported License. To view a copy of this license, visit <a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/</a> or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.</p>
 <p>DESIGNATION OF OPEN GAME CONTENT
