--- a/classes/bard/index.html
+++ b/classes/bard/index.html
@@ -14,7 +14,8 @@
     
   </head>
   <body data-spy="scroll" data-target="#sidemenu">
-  
+  <div id="wrap">
+   
 <nav id="site-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
  
 <div class="navbar-header">
@@ -100,16 +101,14 @@
 </div>
 </nav>
 
-  <nav id="sidemenu" class="col-md-3" style="height: 90%; position: fixed;">
-   <ul id="sidemenu-topnav" class="nav" style="overflow-y: auto; height: 85%;">
+    <div class="container">
+       <div class="row">
+            <nav id="sidemenu" class="col-md-3">
+   <ul id="sidemenu-topnav" class="nav">
    </ul>
 </nav>
 
-  <div id="wrap">
-    <div class="container" style="height:100%;">
-       <div class="row" style="height:100%;">
-            
-          <div class="col-md-8 col-md-offset-1">
+          <div class="col-md-6 col-md-offset-1">
              <h1>The Bard</h1>
 <div id="intro"><p class="NoIndent">The poems say an adventurer’s life is all open roads and the glory of coin and combat. The tales told in every farmhand-filled inn have to have some ring of truth to them, don’t they? The songs to inspire peasantry and royals alike—to soothe the savage beast or drive men to a frenzy—have to come from somewhere.</p>
 <p>Enter the bard. You, with your smooth tongue and quick wit. You teller-of-tales and singer-of-songs. It takes a mere minstrel to retell a thing but a true bard to live it. Strap on your boots, noble orator. Sharpen that hidden dagger and take up the call. Someone’s got to be there, fighting shoulder-to-shoulder with the goons and the thugs and the soon-to-be-heroes. Who better than you to write the tale of your own heroism?</p>
