--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -14,7 +14,8 @@
     
   </head>
   <body data-spy="scroll" data-target="#sidemenu">
-  
+  <div id="wrap">
+   
 <nav id="site-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
  
 <div class="navbar-header">
@@ -100,16 +101,14 @@
 </div>
 </nav>
 
-  <nav id="sidemenu" class="col-md-3" style="height: 90%; position: fixed;">
-   <ul id="sidemenu-topnav" class="nav" style="overflow-y: auto; height: 85%;">
+    <div class="container">
+       <div class="row">
+            <nav id="sidemenu" class="col-md-3">
+   <ul id="sidemenu-topnav" class="nav">
    </ul>
 </nav>
 
-  <div id="wrap">
-    <div class="container" style="height:100%;">
-       <div class="row" style="height:100%;">
-            
-          <div class="col-md-8 col-md-offset-1">
+          <div class="col-md-6 col-md-offset-1">
              <div><h2>Rotes</h2>
 <p class="NoIndent">Every time you commune, you gain access to all of your rotes without having to select them or count them toward your allotment of spells.</p>
 <p class="SpellName" id="SpellName"><span class="SpellName">Light</span>	Rote</p>
