--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
     <div class="container">
        <div class="row">
-            <nav id="sidemenu" class="col-md-3" style="height: 90%; position: fixed;">
-   <ul id="sidemenu-topnav" class="nav" style="overflow-y: auto; height: 85%;">
+            <nav id="sidemenu" class="col-md-3">
+   <ul id="sidemenu-topnav" class="nav">
    </ul>
 </nav>
 
