--- a/monsters/caverns/index.html
+++ b/monsters/caverns/index.html
@@ -31,9 +31,9 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
    <li class="dropdown">
-     <a href="#" class="dropdown-toggle" data-toggle="dropdown">遊戲 <b class="caret"></b></a>
+     <a href="#" class="dropdown-toggle" data-toggle="dropdown">本遊戲 <b class="caret"></b></a>
      <ul class="dropdown-menu">
-       <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/introduction">介紹</a></li>
+       <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/introduction">簡介</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/playing_the_game">進行遊戲</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/example">遊玩範例</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/character_creation">角色創造</a></li>
@@ -50,7 +50,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/cleric">牧師</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/druid">德魯伊</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/fighter">戰士</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/paladin">聖騎士</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/paladin">聖武士</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/ranger">遊俠</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/thief">盜賊</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/wizard">法師</a></li>
@@ -64,11 +64,11 @@
    <li class="dropdown">
      <a href="#" class="dropdown-toggle" data-toggle="dropdown">GM章節 <b class="caret"></b></a>
      <ul class="dropdown-menu">
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/basics">基礎</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/basics">基本</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">Fronts</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界觀</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -81,16 +81,16 @@
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/depths">下界深淵</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面之力</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠集團</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面權能</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠團夥</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/swamp">沼澤棲物</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/experiments">扭曲實驗體</a> </li>
      </ul>
      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">Conversion</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">Teaching the Game</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">轉換冒險</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
         </ul>
      </li>
@@ -252,8 +252,8 @@
       
 <div id="footer">
 <div class="container">
-   <p class="NoIndent"><a href="http://deepeningdays.com/dungeon-world-html-srd/">Dungeon World HTML SRD</a> &copy; 2013, Andrew Codispoti. <a href="http://dungeon-world.com">Dungeon World</a> is copyright Sage Kobold Productions.
-   <br><a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>, some rights reserved, see <a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/license/">license</a> for details.</p>
+   <p class="NoIndent"><a href="http://deepeningdays.com/dungeon-world-html-srd/">地城世界 Dungeon World HTML SRD</a> &copy; 2013，Andrew Codispoti。 <a href="http://dungeon-world.com">Dungeon World</a> 的版權由 Sage Kobold Productions 所有，
+   <br><a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>保留部分權利，詳見<a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/license/">版權頁</a>。</p>
 </div>
 </div>
 
