--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
    <li class="dropdown">
-     <a href="#" class="dropdown-toggle" data-toggle="dropdown">遊戲 <b class="caret"></b></a>
+     <a href="#" class="dropdown-toggle" data-toggle="dropdown">本遊戲 <b class="caret"></b></a>
      <ul class="dropdown-menu">
-       <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/introduction">介紹</a></li>
+       <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/introduction">簡介</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/playing_the_game">進行遊戲</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/example">遊玩範例</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/character_creation">角色創造</a></li>
@@ -51,7 +51,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/cleric">牧師</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/druid">德魯伊</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/fighter">戰士</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/paladin">聖騎士</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/paladin">聖武士</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/ranger">遊俠</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/thief">盜賊</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/wizard">法師</a></li>
@@ -65,11 +65,11 @@
    <li class="dropdown">
      <a href="#" class="dropdown-toggle" data-toggle="dropdown">GM章節 <b class="caret"></b></a>
      <ul class="dropdown-menu">
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/basics">基礎</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/basics">基本</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">Fronts</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界觀</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -82,16 +82,16 @@
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/depths">下界深淵</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面之力</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠集團</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面權能</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠團夥</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/swamp">沼澤棲物</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/experiments">扭曲實驗體</a> </li>
      </ul>
      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">Conversion</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">Teaching the Game</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">轉換冒險</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
         </ul>
      </li>
@@ -112,17 +112,17 @@
           <div class="col-md-6 col-md-offset-1">
 <h1>地城世界 HTML SRD</h1>
 
-<p><a href="http://www.dungeon-world.com/">地城世界</a>是一款由《Sage Kobold Productions》公司旗下的Sage LaTorra和Adam Koebel所設計桌上型角色扮演遊戲。這份文件是此遊戲的系統關聯文件(System Reference Document, SRD)，使用HTML的格式編寫，以供瀏覽器閱覽。</p>
+<p><a href="http://www.dungeon-world.com/">地城世界</a>是一款由 Sage Kobold Productions 公司旗下的 Sage LaTorra 和 Adam Koebel 所設計的桌上型角色扮演遊戲。這個網站是此遊戲的系統參考書（System Reference Document, SRD），以 HTML 的格式編寫，供瀏覽器閱覽。</p>
 
-<p>本站係借助了<a href="http://getbootstrap.com/">Bootstrap</a>的設計，並以<a href="https://gohugo.io/">Hugo</a>加以建置而成。</p>
+<p>本站借助了 <a href="http://getbootstrap.com/">Bootstrap</a> 的設計，並以 <a href="https://gohugo.io/">Hugo</a> 建置而成。</p>
 
-<p>若你想要為這個專案貢獻一份心力（比如說你發現了某個可以改良的地方、或是漏掉的翻譯、錯字等），請在 <a href="https://github.com/hazmole/Dungeon-World-HTML-SRD">Github專案</a>上創建一個pull request，或提交到 <a href="https://github.com/acodispo/Dungeon-World-HTML-SRD">原本的專案</a>上</p>
+<p>若你想要為這個專案貢獻一份心力（比如說你發現了某個可以改良的地方、或是漏掉的翻譯、錯字等），請在 <a href="https://github.com/hazmole/Dungeon-World-HTML-SRD">Github 專案</a>上創建一個 pull request ，或提交到 <a href="https://github.com/acodispo/Dungeon-World-HTML-SRD">原始專案</a>上</p>
 
-<p>《地城世界》的原始資料文件（衍生出這份HTML SRD文件的原檔）可以在 GitHub上被找到： <a href="https://github.com/Sagelt/Dungeon-World">https://github.com/Sagelt/Dungeon-World</a></p>
+<p>《地城世界》的原始資料文件（衍生出這份 HTML SRD 文件的原檔）可在 GitHub 上找到： <a href="https://github.com/Sagelt/Dungeon-World">https://github.com/Sagelt/Dungeon-World</a></p>
 
 <h2 id="license">授權</h2>
 
-<p>本站採用<a href="http://creativecommons.org/licenses/by/3.0/">創用CC 3.0 Unported 授權條款</a>以及<strong>開放遊戲授權(Open Gaming License)</strong>。請參閱<a href="license/">授權頁</a>以瞭解更多細節。</p>
+<p>本站採用<a href="http://creativecommons.org/licenses/by/3.0/">創用 CC 3.0 Unported 授權條款</a>與<strong>開放遊戲授權（Open Gaming License）</strong>。請參閱<a href="license/">授權頁</a>以瞭解更多細節。</p>
           </div>
        </div>
     </div>
@@ -130,8 +130,8 @@
       
 <div id="footer">
 <div class="container">
-   <p class="NoIndent"><a href="http://deepeningdays.com/dungeon-world-html-srd/">Dungeon World HTML SRD</a> &copy; 2013, Andrew Codispoti. <a href="http://dungeon-world.com">Dungeon World</a> is copyright Sage Kobold Productions.
-   <br><a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>, some rights reserved, see <a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/license/">license</a> for details.</p>
+   <p class="NoIndent"><a href="http://deepeningdays.com/dungeon-world-html-srd/">地城世界 Dungeon World HTML SRD</a> &copy; 2013，Andrew Codispoti。 <a href="http://dungeon-world.com">Dungeon World</a> 的版權由 Sage Kobold Productions 所有，
+   <br><a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>保留部分權利，詳見<a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/license/">版權頁</a>。</p>
 </div>
 </div>
 
