--- a/introduction/index.html
+++ b/introduction/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Introduction | 地城世界 HTML SRD</title>
+  <title>簡介 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,9 +31,9 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  <ul class="nav navbar-nav">
    <li class="dropdown">
-     <a href="#" class="dropdown-toggle" data-toggle="dropdown">遊戲 <b class="caret"></b></a>
+     <a href="#" class="dropdown-toggle" data-toggle="dropdown">本遊戲 <b class="caret"></b></a>
      <ul class="dropdown-menu">
-       <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/introduction">介紹</a></li>
+       <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/introduction">簡介</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/playing_the_game">進行遊戲</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/example">遊玩範例</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/character_creation">角色創造</a></li>
@@ -50,7 +50,7 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/cleric">牧師</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/druid">德魯伊</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/fighter">戰士</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/paladin">聖騎士</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/paladin">聖武士</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/ranger">遊俠</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/thief">盜賊</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/classes/wizard">法師</a></li>
@@ -64,11 +64,11 @@
    <li class="dropdown">
      <a href="#" class="dropdown-toggle" data-toggle="dropdown">GM章節 <b class="caret"></b></a>
      <ul class="dropdown-menu">
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/basics">基礎</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/basics">基本</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/first_session">第一次聚會</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">Fronts</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界觀</a></li>
-        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">深入鑽研</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/fronts">前置</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/the_world">世界</a></li>
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/gm/advanced_delving">進階</a></li>
      </ul>
    </li>
    <li class="dropdown">
@@ -81,16 +81,16 @@
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/depths">下界深淵</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面之力</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠集團</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面權能</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠團夥</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/swamp">沼澤棲物</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/experiments">扭曲實驗體</a> </li>
      </ul>
      <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">附錄 <b class="caret"></b></a>
         <ul class="dropdown-menu">
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">Conversion</a></li>
-           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">Teaching the Game</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/conversion">轉換冒險</a></li>
+           <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/teaching">進行教學</a></li>
            <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">NPCs</a></li>
         </ul>
      </li>
@@ -109,25 +109,28 @@
     <div class="container">
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
-             <h1>Introduction</h1>
+             <h1>簡介</h1>
 <div id="Introduction">
-<h2>Dungeon World</h2>
-<p class="NoIndent">Dungeon World is a world of fantastic adventure. A world of magic, gods and demons, of good and evil, law and chaos. Brave heroes venture into the most dangerous corners of the land in search of gold and glory.</p>
-<p>Adventurers take many shapes in Dungeon World. The races of elves, men, dwarves, and halflings all have their heroes. Some are near-invincible beasts of battle encased in iron armor. Others are more mysterious, conjuring up and wielding the mighty forces of magic. Treasure and glory are sought by a holy cleric, a tricky thief, a mighty paladin, and more.</p>
-<p>It isn’t all easy heroics and noble bravery, though. Every time the ranger guides his friends through the ancient woods there are a hundred things waiting to bite his head off. Slavering hordes of goblin troops, maybe. Or is this the Cursed Wood, where dwells the Gray Witch? Or the throngs of hateful dead, looking to drag a meaty corpse back to their lair? Scary, sure, but there’s treasure, too. More gold and jewels and magic lost to man have fallen between the cracks in the world than you can imagine. Who better to retrieve it than a band of stalwart heroes? </p>
-<p>You and your friends <em>are</em> those heroes. You go where others can’t or won’t. There are monstrous things lurking in the world. Are you ready to face them?</p>
-<h2>The Bard</h2>
-<p class="NoIndent">The poems say an adventurer’s life is all open roads and the glory of coin and combat. The tales told in every farmhand-filled inn have to have some ring of truth to them, don’t they? The songs to inspire peasantry and royals alike—to soothe the savage beast or drive men to a frenzy—have to come from somewhere.</p>
-<p>Enter the bard. You, with your smooth tongue and quick wit. You teller-of-tales and singer-of-songs. A mere minstrel can retell a thing, but it takes a true bard to live it. Strap on your boots, noble orator. Sharpen that hidden dagger and take up the call. Someone’s got to be there, fighting shoulder-to-shoulder with the goons and the thugs and the soon-to-be-heroes. Who better than you to write the tale of your own heroism?</p>
-<p>Nobody. Get going.</p>
-<h2>The Cleric</h2>
-<p class="NoIndent">The lands of Dungeon World are a gods-forsaken mess. They’re lousy with the walking dead, beasts of all sorts, and the vast unnatural spaces between safe and temple-blessed civilizations. It is a godless world out there. That’s why it needs you.</p>
-<p>Bringing the glory of your god to the heathens isn’t just in your nature—it’s your calling. It falls to you to proselytize with sword and mace and spell, to cleave deep into the witless heart of the wilds and plant the seed of divinity there. Some say that it’s best to keep the gods close to your heart. You know that’s rubbish. God lives at the edge of a blade.</p>
-<p>Show the world who is lord.</p>
-<h2>The Druid</h2>
-<p class="NoIndent">Cast your eyes around the fire. What has brought you to these people, stinking of the dust and sweat of the city? Perhaps it is a kindness—do you protect them as the mother bear watches over her cubs? Are they your pack, now? Strange brothers and sisters you have. Whatever your inspiration, they would certainly fail without your sharp senses and sharper claws.</p>
-<p>You are of the sacred spaces; you are born of soil and wear the marks of her spirits on your skin. You may have had a life before, maybe you were a city dweller like them, but not now. You’ve given up that static shape. Listen to your allies pray to their carved stone gods and polish their silver shells. They speak of the glory they’ll find back in that festering town you left behind.</p>
-<p>Their gods are children, their steel is false protection. You walk the old ways, you wear the pelts of the earth itself. You’ll take your share of the treasure, but will you ever walk as one of them? Only time will tell.</p>
+<h2>地城世界 (Dungeon World)</h2>
+<p class="NoIndent">地城世界是奇幻冒險的世界。是個充斥著魔法、神魔、善惡、律法與混沌的世界。勇敢的英雄闖蕩於大地上最危險的角落，追求財富與榮耀。</p>
+<p>在地城世界中有形形色色的冒險者。精靈、人類、矮人與半身人都有屬於自己的英雄。他們之中有身穿鐵甲，無人能敵的戰場猛獸；有的則神秘莫測，呼喚並驅使著魔法的力量。這些尋求財寶與榮耀的，有神聖的牧師、有奸巧的盜賊、有強大的聖武士、還有更多更多。</p>
+<p>然而，冒險並不只有輕鬆的英雄主義與高尚的英勇行徑。每當遊俠帶著他的朋友穿越古老森林時，數以百計的危險虎視眈眈地等著咬掉他的頭顱。或許，等待著他們的是流著口水的哥布林部隊，又或許，他們行經的是居住著灰衣女巫的詛咒之森？亦或者，一整群怨靈正飢渴地尋找著用以還魂的肉身屍體。可怕嗎？當然，但是財寶也在那裏。在危險深處，無數被世人遺忘的黃金珠寶和魔法散落在你所熟悉世界的陰暗夾縫之間。除了堅定勇敢的英雄們之外，又有誰能夠取回它們？</p>
+<p>你和你的朋友<b>就是</b>那些英雄。你們踏足他人無法或不願涉足的險地。怪誕之物潛居於這個世界──你準備好面對牠們了嗎？</p>
+<hr/>
+<h2>吟遊詩人 (The Bard)</h2>
+<p class="NoIndent">冒險者之詩乃是不斷邁進之途，是錢幣與戰鬥的榮光。在每個擠滿農人的酒館中所傳唱的故事，總有些真實之處，對吧？那些鼓舞農民與國親的歌謠──那些撫慰野獸或讓人瘋狂的歌謠──必定其來有自。</p>
+<p>當個詩人吧！來，帶著你的巧舌與機智。你是故事的傳誦者，也是歌曲的演唱者。一名樂手也許能夠複誦旋律，但真正的吟遊詩人則活在其中。繫上你的靴子吧，高貴的演說家。磨利匕首，接受呼喚。總得有人要跟那些將為英雄的勇士們並肩作戰，一同對抗凶狠的惡棍與暴徒。又有誰，比你更有資格傳誦屬於自己的英雄詩篇呢？</p>
+<p>沒有別人了。走吧。</p>
+<hr/>
+<h2>牧師 (The Cleric)</h2>
+<p class="NoIndent">地城世界的大地是被諸神遺棄的爛攤子。在安全與被賜福的文明之間，大地遍布著走動的死屍、各樣野獸、以及超自然之境。那是個不存在諸神的世界
+，而這也正是它們需要你的原因。</p>
+<p>將神明的榮耀傳授予異教徒不僅是你的本質，更是你的使命。你持劍、槌、與咒法宣教，在荒蕪野蠻的無智之心深深植入聖潔的種籽。有人說最好讓神住在你心裡，但你知道這全是狗屁。神只彰顯於刀鋒的尖端。</p>
+<p>告訴這個世界，誰才是真正的老大。</p>
+<h2>德魯伊 (The Druid)</h2>
+<p class="NoIndent">環視火堆，是什麼領你來到了這群滿是城市塵埃與汗臭的人們身邊？或許是因為仁慈吧──你是否像母熊照看著她的幼崽？他們現在是與你一夥嗎？那可真是群奇異的兄弟姊妹呢。無論是因為受到什麼啟發，沒有你敏銳的感知與獠爪，他們註定不會成功。</p>
+<p>你來自聖潔之地；你生自母土，身披她的精魂刻於你身上的印記。你可能也有過凡人般的生活，也許你也曾跟他們曾居於都城，如今卻非如此。你已拋棄停滯的定型。聆聽你同伴們對那些石刻神像的祈禱、打磨他們銀製的盾牌。他們說他們將在那不斷破敗的城鎮中找回榮譽，而你早已將之拋諸腦後。</p>
+<p>他們的神靈僅是年幼孩童，他們的鋼鐵只能提供虛假的保護。你遵循舊道，你穿戴的毛皮象徵大地本身。你仍拿取你所分到的財寶，但你是否會再走回和他們相同的道路呢？只有時間能證明一切。</p>
 <h2>The Fighter</h2>
 <p class="NoIndent">It’s a thankless job—living day to day by your armor and the skill of your arm, diving heedlessly into danger. They won’t be playing golden horns for the time you took that knife to the ribs for them in the bar in Bucksberg. No flock of angels will sing of the time you dragged them, still screaming, from the edge of the Pits of Madness, no.</p>
 <p>Forget them.</p>
@@ -182,8 +185,8 @@
       
 <div id="footer">
 <div class="container">
-   <p class="NoIndent"><a href="http://deepeningdays.com/dungeon-world-html-srd/">Dungeon World HTML SRD</a> &copy; 2013, Andrew Codispoti. <a href="http://dungeon-world.com">Dungeon World</a> is copyright Sage Kobold Productions.
-   <br><a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>, some rights reserved, see <a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/license/">license</a> for details.</p>
+   <p class="NoIndent"><a href="http://deepeningdays.com/dungeon-world-html-srd/">地城世界 Dungeon World HTML SRD</a> &copy; 2013，Andrew Codispoti。 <a href="http://dungeon-world.com">Dungeon World</a> 的版權由 Sage Kobold Productions 所有，
+   <br><a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>保留部分權利，詳見<a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/license/">版權頁</a>。</p>
 </div>
 </div>
 
