--- a/equipment/index.html
+++ b/equipment/index.html
@@ -130,7 +130,7 @@
 <p><em>穿戴 (Worn)</em>: 你必須要穿戴它才能夠使用它。</p>
 <p><em>n 使用次數 (n Uses)</em>: 它只能被使用 <em>n</em> 次。 </p>
 <hr/>
-<h2>武器(Weapons)</h2>
+<h2>武器 (Weapons)</h2>
 <p class="NoIndent">殺死怪物的並非武器，而是揮舞它們的人。這也是為什麼《地城世界》中的武器並沒有列出其傷害數據。武器的主要重點在於其標籤，用來描述這把武器的用途與特性。一把匕首的重點並不在於它能造成比其他刀劍更多或更少的傷害，而在於它的小巧靈活，且能輕易地在極近距離下重創對手。因此，法師手中匕首的威脅性，就很明顯不如技巧純熟的戰士手上的那把匕首。</p>
 <h3>武器標籤</h3>
 <p class="NoIndent">武器可能會帶有一些主要用以幫助你描述它們的標籤（例如「生鏽」或「閃閃發光」），但以下這些標籤除了描述的用途之外，還有著其他遊戲機制上的效果。</p>
@@ -169,7 +169,7 @@
 <p class="Item">刺劍	<span class="Tags">近身, 靈巧, 25 金幣, 1 重量</span></p>
 <p class="Item">決鬥刺劍	<span class="Tags">近身, 1 穿透, 靈巧, 50 金幣, 2 重量</span></p>
 <hr/>
-<h2>防具(Armor)</h2>
+<h2>防具 (Armor)</h2>
 <p class="NoIndent">Armor is heavy, difficult to wear and is damned uncomfortable. Some classes are better trained to ignore these drawbacks, but anyone can strap on a suit of armor and enjoy the benefits it grants.</p>
 <h3>防具標籤</h3>
 <p class="NoIndent">Armor, like weapons, has tags. Some are purely descriptive but the ones below have some mechanical effect on the player wearing them</p>
@@ -208,7 +208,7 @@
 <p class="Item">Halfling Pipeleaf	<span class="Tags">6 使用次數, 5 金幣, 0 重量</span></p>
 <p class="ItemDescription">When you share halfling pipeleaf with someone, expend two uses and take +1 forward to parley with them.</p>
 <hr/>
-<h2>毒藥(Poisons)</h2>
+<h2>毒藥 (Poisons)</h2>
 <p class="Item">塔吉特之油	<span class="Tags">危險, 內服, 15 金幣, 0 重量</span></p>
 <p class="ItemDescription">目標將陷入淺層睡眠。</p>
 <p class="Item">鮮血煙草	<span class="Tags">危險, 接觸, 12 金幣, 0 重量</span></p>
@@ -218,7 +218,7 @@
 <p class="Item">蛇之淚	<span class="Tags">危險, 接觸, 10 金幣, 0 重量</span></p>
 <p class="ItemDescription">任何人對目標造成傷害時，擲兩次傷害骰，並取用較好的結果。</p>
 <hr/>
-<h2>服務(Services)</h2>
+<h2>服務 (Services)</h2>
 <p class="Item">平民客棧的一周住宿費	<span class="Tags">14-魅力 金幣</span></p>
 <p class="Item">城鎮客棧的一周住宿費	<span class="Tags">30-魅力 金幣</span></p>
 <p class="Item">豪華客棧的一周住宿費	<span class="Tags">43-魅力 金幣</span></p>
@@ -235,12 +235,12 @@
 <p class="Item">為死者進行一個月的祈禱	<span class="Tags">1 金幣</span></p>
 <p class="Item">修理一件凡俗物品	<span class="Tags">物品 25% 的價格</span></p>
 <hr/>
-<h2>餐膳(Meals)</h2>
+<h2>餐膳 (Meals)</h2>
 <p class="Item">供單人溫飽的一餐	<span class="Tags">1 金幣</span></p>
 <p class="Item">供貧苦家庭的一餐	<span class="Tags">1 金幣</span></p>
 <p class="Item">盛宴	<span class="Tags">每人 15 金幣</span></p>
 <hr/>
-<h2>交通運輸(Transport)</h2>
+<h2>交通運輸 (Transport)</h2>
 <p class="Item">驢車（忠於運載你的行囊）	<span class="Tags">50 金幣, 運載量 20</span></p>
 <p class="Item">馬	<span class="Tags">75 金幣, 運載量 10</span></p>
 <p class="Item">戰馬	<span class="Tags">400 金幣, 運載量 12</span></p>
@@ -253,7 +253,7 @@
 <p class="Item">崎嶇路程的旅費	<span class="Tags">10 金幣</span></p>
 <p class="Item">危險路程的旅費	<span class="Tags">100 金幣</span></p>
 <hr/>
-<h2>土地與建築物(Land and Buildings)</h2>
+<h2>土地與建築物 (Land and Buildings)</h2>
 <p class="Item">一間茅舍	<span class="Tags">20 金幣</span></p>
 <p class="Item">一棟民房	<span class="Tags">500 金幣</span></p>
 <p class="Item">一棟別墅	<span class="Tags">2,500 金幣</span></p>
@@ -263,14 +263,14 @@
 <p class="Item">一座大城堡	<span class="Tags">1,000,000 金幣</span></p>
 <p class="Item">一個月的維持費	<span class="Tags">建築物 1% 的價格</span></p>
 <hr/>
-<h2>賄賂費(Bribes)</h2>
+<h2>賄賂費 (Bribes)</h2>
 <p class="Item">農民的嫁妝	<span class="Tags">20-魅力 金幣</span></p>
 <p class="Item">小生意的「保護費」	<span class="Tags">100-魅力 金幣</span></p>
 <p class="Item">官員賄款	<span class="Tags">50-魅力 金幣</span></p>
 <p class="Item">令人滿意的賄款	<span class="Tags">80-魅力 金幣</span></p>
 <p class="Item">令人無法拒絕的鉅款	<span class="Tags">500-魅力 金幣</span></p>
 <hr/>
-<h2>禮物與服飾(Gifts and Finery)</h2>
+<h2>禮物與服飾 (Gifts and Finery)</h2>
 <p class="Item">農民的謝禮	<span class="Tags">1 金幣</span></p>
 <p class="Item">良質厚禮	<span class="Tags">55 金幣</span></p>
 <p class="Item">貴族的餽贈	<span class="Tags">200 金幣</span></p>
@@ -279,7 +279,7 @@
 <p class="Item">精美的掛毯	<span class="Tags">350+ 金幣</span></p>
 <p class="Item">國王配戴的王冠	<span class="Tags">5,000 金幣</span></p>
 <hr/>
-<h2>寶藏(Hoards)</h2>
+<h2>寶藏 (Hoards)</h2>
 <p class="Item">一隻哥布林的積財	<span class="Tags">2 金幣</span></p>
 <p class="Item">一件蜥蜴人的小飾品	<span class="Tags">5 金幣</span></p>
 <p class="Item">一把「無價」寶劍	<span class="Tags">80 金幣</span></p>
@@ -425,6 +425,11 @@
           $("ul.currentul").append("<li class='currentli'><a id='link" + i + "' href='#title" +
             i + "' title='" + tag + "'>" + 
             link_text + "</a></li>");
+      });
+      $(".Tags").each(function(i) {
+        var current = $(this);
+        var tags_arr = current.html().split(", ");
+        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
       });
     </script>
   </body>
