--- a/moves_discussion/index.html
+++ b/moves_discussion/index.html
@@ -392,6 +392,11 @@
             i + "' title='" + tag + "'>" + 
             link_text + "</a></li>");
       });
+      $(".Tags").each(function(i) {
+        var current = $(this);
+        var tags_arr = current.html().split(", ");
+        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
+      });
     </script>
   </body>
 </html>
