--- a/introduction/index.html
+++ b/introduction/index.html
@@ -121,29 +121,29 @@
 <p class="NoIndent">冒險者之詩乃是不斷向前之路，是錢幣與戰鬥的榮光。在那些鄉農滿座的酒館中被傳唱的故事，總有些許真實，對吧？那些鼓舞農民與國親的歌謠──那些撫慰野獸或讓人瘋狂的歌謠──必定其來有自。</p>
 <p>當個詩人吧。來，帶著你的巧舌與機智。你說故事，你唱歌謠。一名尋常樂手只會複誦，而真正的吟遊詩人活在其中。繫上你的靴子吧，高貴的演說家。磨利那把小刀，接受呼喚。總得有人要與那些暴徒、惡棍與即將成為英雄的人們並肩作戰。又有誰比你更能傳誦自己的英雄故事？</p>
 <p>沒有別人了。來吧。</p>
-<hr/>
 <h2>牧師 (The Cleric)</h2>
 <p class="NoIndent">地城世界的大地就是個被神遺棄的爛攤子。在安全與被祝福的文明之間，佈滿了走動的死屍、各種的野獸、跟廣袤的超自然之地。那是個神不存在的世界，而這也正是為何需要你的原因。</p>
 <p>將神之榮光帶給異教徒不只是你的本性──更是你的使命。你持著劍、槌和咒法宣教，劈開粗野的愚蠢之心，植入神聖之籽。有人說，最好讓神常伴你心。你知道那都是狗屁。神只住在刀鋒之上。</p>
 <p>向這個世界證明，誰才是它的主宰。</p>
 <h2>德魯伊 (The Druid)</h2>
 <p class="NoIndent">環視火堆周圍，這些人滿是城市的塵埃與汗味，是什麼將你帶到這些人身邊？或許是慈愛吧──你是否如同母熊照看她的幼崽保護著他們？他們現在是你這群的嗎？你可真有群奇怪的兄弟姊妹。不管你有怎樣的靈感，沒有你銳利的感官和更銳利的獠爪，他們註定不會成功。</p>
-<p>你屬於神聖之所；你出生於母土，你的身上戴著她的靈魂之印。你可能也曾有過凡人的生活，或許你也像他們曾居於都城，如今卻已非如此。你拋棄了停滯的定型。聆聽你盟友對他們所雕神像的祈禱，聆聽他們磨亮銀貝，講述他們將在早已被你拋棄的破爛小鎮中找回的榮耀。</p>
+<p>你屬於神聖之所；你出生於母土，你的身上戴著她的靈魂之印。你可能也曾有過凡人的生活，或許你也像他們曾居於都城，如今卻已非如此。你拋棄了停滯的定型。聆聽你盟友對他們所雕神像的祈禱，聆聽他們的宗教寓言故事，講述他們將在早已被你拋棄的破爛小鎮中找回的榮耀。</p>
 <p>他們的諸神只是年幼的孩童，他們的鋼鐵只是虛假的保護。你走在古老的路上，披大地為衣。你會拿取屬於你的財寶，但你是否會走上與他們相同的路呢？只有時間知道。</p>
-<h2>The Fighter</h2>
-<p class="NoIndent">It’s a thankless job—living day to day by your armor and the skill of your arm, diving heedlessly into danger. They won’t be playing golden horns for the time you took that knife to the ribs for them in the bar in Bucksberg. No flock of angels will sing of the time you dragged them, still screaming, from the edge of the Pits of Madness, no.</p>
-<p>Forget them.</p>
-<p>You do this for the guts and the glory, for the scream of battle and the hot, hot blood of it. You are a beast of iron. Your friends may carry blades of forged steel but, fighter, you are steel. While your traveling companions might moan about their wounds around a campfire in the wilderness, you bear your scars with pride.</p>
-<p>You are the wall—let every danger smash itself to dust on you. In the end, you’ll be the last one standing.</p>
-<h2>The Paladin</h2>
-<p class="NoIndent">Hell awaits. An eternity of torment in fire or ice or whatever best suits the sins of the damned throngs of Dungeon World. All that stands between the pits of that grim torture and salvation is you. Holy man, armored war machine, templar of the Good and the Light, right? The cleric may say his prayers at night to the gods, dwelling in their heavens. The fighter may wield his sharp sword in the name of “good” but you know. Only you.</p>
-<p>Eyes, hands, and sweet killing blow of the gods, you are. Yours is the gift of righteousness and virtue—of justice, of Vision, too. A purity of intent that your companions do not have.</p>
-<p>So guide these fools, paladin. Take up your holy cause and bring salvation to the wastrel world.</p>
-<p>Vae victis, right?</p>
-<h2>The Ranger</h2>
-<p class="NoIndent">These city-born folk you travel with. Have they heard the call of the wolf? Felt the winds howl in the bleak deserts of the East? Have they hunted their prey with the bow and the knife like you? Hell no. That’s why they need you.</p>
-<p>Guide. Hunter. Creature of the wilds. You are these things and more. Your time in the wilderness may have been solitary until now, but the call of some greater thing—call it fate if you like—has cast your lot with these folk. Brave, they may be. Powerful and strong, too. But only you know the secrets of the spaces between.</p>
-<p>Without you, they’d be lost. Blaze a trail through the blood and dark, strider.</p>
+<h2>戰士 (The Fighter)</h2>
+<p class="NoIndent">這是份爛差事－－日復一日靠著你的盔甲和手上技巧討生活，不顧一切地跳入危險之中。當你在巴爾斯伯格的酒吧為他們兩肋插刀時，沒有人為你吹奏黃金號角。當你將還在尖叫的他們從瘋狂深淵的邊緣拽出時，沒有成群天使為你合唱。什麼都沒有。
+</p>
+<p>忘了他們吧。</p>
+<p>你這麼做是為了膽識與榮耀，是為了戰鬥的呼嘯、以及那熾熱的鮮血。你是鐵打的猛獸。你的朋友或許帶著鋼鑄的鋒刃，然而，戰士，你本身就是鋼鐵。當你的旅伴在荒野營火旁抱怨著他們的傷口，你則驕傲的背起自己的傷疤。</p>
+<p>你即是銅牆鐵壁－－任憑所有撲向你的危險灰飛煙滅。最終，你會是站到最後的那一個。</p>
+<h2>聖武士 (The Paladin)</h2>
+<p class="NoIndent">地獄正在等候。或寒冰，或烈火，或地城世界中那些該死罪人們所應得的懲罰，構成了此地的永恆折磨。殘虐或者救贖，一切由你。神聖之士，戰爭機器，全善與光明的聖堂武士，是吧？牧師或許在夜裡向天界上蒼祈禱。戰士或許會以「善」之名揮舞利劍。但只有你知道，何謂善。</p>
+<p>眾神之眼，之手，之殺戮神罰，這就是你。你所賜的乃是公義與美德－－乃是正義，乃是願景。你胸懷同伴們所欠缺的，純粹之意念。</p>
+<p>所以引導這些愚者吧，聖武士。擔負起你的聖潔使命，將救贖帶到這個破爛世界。</p>
+<p>敗者毋怨悽慘，對吧？</p>
+<h2>遊俠 (The Ranger)</h2>
+<p class="NoIndent">與你同行的這些都市兒童。他們可曾聽見孤狼的吠叫？可曾感受過東方荒蕪沙漠的狂風呼嘯？可曾如你那樣以弓刃狩獵？當然他媽的沒有。那就是為什麼他們需要你。</p>
+<p>嚮導、獵手、荒野的造物。你遠遠不只如此。你在荒野中一向孤獨，但那偉大之物的呼喚－－或許可以稱之為命運－－將你與這些都市人的命連繫在了一起。他們或許勇敢。或許強大健壯。但只有你通曉這兩者間的秘密。</p>
+<p>沒有你，他們就會迷失。在鮮血與黑暗之中燒出通往前方的道路吧，神行客。</p>
 <h2>The Thief</h2>
 <p class="NoIndent">You’ve heard them, sitting around the campfire. Bragging about this battle or that, or about how their gods are smiling on your merry band. You count your coins and smile to yourself—this is the thrill above all. You alone know the secret of Dungeon World: filthy, filthy lucre.</p> 
 <p>Sure, they give you lip for all the times you’ve snuck off alone, but without you, every one of them would have been dissected by a flying guillotine or poisoned straight to death by some ancient needle trap. So let them complain. When you’re done with all this delving you’ll toast their heroes’ graves.</p>
@@ -218,6 +218,11 @@
           $("ul.currentul").append("<li class='currentli'><a id='link" + i + "' href='#title" +
             i + "' title='" + tag + "'>" + 
             link_text + "</a></li>");
+      });
+      $(".Tags").each(function(i) {
+        var current = $(this);
+        var tags_arr = current.html().split(", ");
+        current.html(tags_arr.map(tag=>"<tag>"+tag+"</tag>").join(""));
       });
     </script>
   </body>
