--- a/classes/paladin/index.html
+++ b/classes/paladin/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>The Paladin | 地城世界 HTML SRD</title>
+  <title>聖武士 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,7 +76,7 @@
      <ul class="dropdown-menu">
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/overview">總覽</a></li>
        <li class="divider"></li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴住民</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴居族</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/folk">王國住民</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
@@ -111,11 +111,12 @@
           <div class="col-md-8 col-md-offset-1">
              
 
-<h1>The Paladin</h1>
-<div id="intro"><p class="NoIndent">Hell awaits. An eternity of torment in fire or ice or whatever best suits the sins of the damned throngs of Dungeon World. All that stands between the pits of that grim torture and salvation is you. Holy man, armored war machine, templar of the Good and the Light, right? The cleric may say his prayers at night to the gods, dwelling in their heavens. The fighter may wield his sharp sword in the name of “good” but you know. Only you.</p>
-<p>Eyes, hands, and sweet killing blow of the gods, you are. Yours is the gift of righteousness and virtue. Of justice. Vision, too. A purity of intent that your companions do not have.</p>
-<p>So guide these fools, paladin. Take up your holy cause and bring salvation to the wastrel world.</p> 
-<p>Vae victis, right?</p></div>
+<h1>聖武士</h1>
+<div id="intro"><p class="NoIndent">地獄正在等候。或寒冰，或烈火，或地城世界中那些該死罪人們所應得的懲罰，構成了此地的永恆折磨。殘虐或者救贖，一切由你。神聖之士，戰爭機器，全善與光明的聖堂武士，是吧？牧師或許在夜裡向天界上蒼祈禱。戰士或許會以「善」之名揮舞利劍。但只有你知道，何謂善。</p>
+<p>眾神之眼，之手，之殺戮神罰，這就是你。你所賜的乃是公義與美德－－乃是正義，乃是願景。你胸懷同伴們所欠缺的，純粹之意念。</p>
+<p>所以引導這些愚者吧，聖武士。擔負起你的聖潔使命，將救贖帶到這個破爛世界。</p> 
+<p>敗者毋怨悽慘，對吧？</p></div>
+<hr/>
 <h2>Names</h2>
 <div id="names"><p class="NoIndent">Thaddeus, Augustine, Lux, Cassius, Hadrian, Lucia, Octavia, Regulus, Valeria, Sanguinus, Titanius</p></div>
 <h2>Look</h2>
