--- a/equipment/index.html
+++ b/equipment/index.html
@@ -76,7 +76,7 @@
      <ul class="dropdown-menu">
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/overview">總覽</a></li>
        <li class="divider"></li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴住民</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴居族</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/folk">王國住民</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
@@ -116,40 +116,40 @@
 <p>以下列出的絕非詳盡完整的清單──自由地創造你自己的標籤吧。</p>
 <h3>泛用裝備標籤</h3>
 <p>這些泛用標籤可以適用於幾乎任何裝備。你會在防具、武器、和一般冒險工具上看到它們。</p>
-<p><em>內服 (Applied)</em>: 它只有在你確切地讓目標服用、或混進他們嚥下的飲食內才會生效。</p>
-<p><em>不便 (Awkward)</em>: 它相當笨重且難以使用。</p>
-<p><em>+修正 (+Bonus)</em>: 它將改變你在特定情況下的行動成效。比如說「憶述見聞下次+1」或是「砍劈持續-1」等等。</p>
-<p><em>n 金幣 (n coins)</em>: 它在正常情況下值多少錢。如果價格包括「－魅力」的文字，則將其價格減去購買者的魅力值（而非修正值）。</p>
-<p><em>危險 (Dangerous)</em>: 使用它很容易讓你惹上麻煩。如果你與它互動時沒有準備適當的預防措施，則GM可以自由地描述你愚蠢行動的後果。</p>
-<p><em>食物 (Ration)</em>: 它是可食用的，或多或少。</p>
-<p><em>限定 (Requires)</em>: 它只對某些人有用。如果你無法滿足它的條件，則它的效果會減弱，或甚至完全無效。</p>
-<p><em>緩慢 (Slow)</em>: 使用它需要花費數分鐘或更久的時間。</p>
-<p><em>接觸 (Touch)</em>: 它需要透過直接接觸到目標肌膚的方式來被使用。</p>
-<p><em>雙手 (Two-handed)</em>: 它需要兩隻手才能被有效地使用。</p>
-<p><em>n 重量 (n weight)</em>: 計算列有重量的物品的總重，並與你的負載量相比較。未列有重量的東西不能被隨身攜帶。100枚標準面額的金幣為1 重量。有著相同價值的寶石或美術品可能會更輕或更重。</p>
-<p><em>穿戴 (Worn)</em>: 你必須要穿戴它才能夠使用它。</p>
-<p><em>n 使用次數 (n Uses)</em>: 它只能被使用 <em>n</em> 次。 </p>
+<p><tag>內服 (Applied)</tag>: 它只有在你確切地讓目標服用、或混進他們嚥下的飲食內才會生效。</p>
+<p><tag>不便 (Awkward)</tag>: 它相當笨重且難以使用。</p>
+<p><tag>+修正 (+Bonus)</tag>: 它將改變你在特定情況下的行動成效。比如說「憶述見聞下次+1」或是「砍劈持續-1」等等。</p>
+<p><tag>n 金幣 (n coins)</tag>: 它在正常情況下值多少錢。如果價格包括「－魅力」的文字，則將其價格減去購買者的魅力值（而非修正值）。</p>
+<p><tag>危險 (Dangerous)</tag>: 使用它很容易讓你惹上麻煩。如果你與它互動時沒有準備適當的預防措施，則GM可以自由地描述你愚蠢行動的後果。</p>
+<p><tag>食物 (Ration)</tag>: 它是可食用的，或多或少。</p>
+<p><tag>限定 (Requires)</tag>: 它只對某些人有用。如果你無法滿足它的條件，則它的效果會減弱，或甚至完全無效。</p>
+<p><tag>緩慢 (Slow)</tag>: 使用它需要花費數分鐘或更久的時間。</p>
+<p><tag>接觸 (Touch)</tag>: 它需要透過直接接觸到目標肌膚的方式來被使用。</p>
+<p><tag>雙手 (Two-handed)</tag>: 它需要兩隻手才能被有效地使用。</p>
+<p><tag>n 重量 (n weight)</tag>: 計算列有重量的物品的總重，並與你的負載量相比較。未列有重量的東西不能被隨身攜帶。100枚標準面額的金幣為1 重量。有著相同價值的寶石或美術品可能會更輕或更重。</p>
+<p><tag>穿戴 (Worn)</tag>: 你必須要穿戴它才能夠使用它。</p>
+<p><tag>n 使用次數 (n Uses)</tag>: 它只能被使用 <em>n</em> 次。 </p>
 <hr/>
 <h2>武器 (Weapons)</h2>
 <p class="NoIndent">殺死怪物的並非武器，而是揮舞它們的人。這也是為什麼《地城世界》中的武器並沒有列出其傷害數據。武器的主要重點在於其標籤，用來描述這把武器的用途與特性。一把匕首的重點並不在於它能造成比其他刀劍更多或更少的傷害，而在於它的小巧靈活，且能輕易地在極近距離下重創對手。因此，法師手中匕首的威脅性，就很明顯不如技巧純熟的戰士手上的那把匕首。</p>
 <h3>武器標籤</h3>
 <p class="NoIndent">武器可能會帶有一些主要用以幫助你描述它們的標籤（例如「生鏽」或「閃閃發光」），但以下這些標籤除了描述的用途之外，還有著其他遊戲機制上的效果。</p>
-<p><em>n 彈藥 (n Ammo)</em>: It counts as ammunition for appropriate ranged weapons. The number indicated does not represent individual arrows or sling stones, but represents what you have left on hand. </p>
-<p><em>擊退 (Forceful)</em>: It can knock someone back a pace, maybe even off their feet. </p>
-<p><em>+n 傷害 (+n Damage)</em>: It is particularly harmful to your enemies. When you deal damage, you add <em>n</em> to it.</p>
-<p><em>無視護甲 (Ignores Armor)</em>: Don’t subtract armor from the damage taken.</p>
-<p><em>破壞性 (Messy)</em>: It does damage in a particularly destructive way, ripping people and things apart.</p>
-<p><em>n 穿透(n Piercing)</em>: It goes right through armor. When you deal damage with <em>n</em> piercing, you subtract <em>n</em> from the enemy’s armor for that attack.</p>
-<p><em>靈巧 (Precise)</em>: It rewards careful strikes. You use DEX to hack and slash with this weapon, not STR.</p>
-<p><em>裝填 (Reload)</em>: After you attack with it, it takes more than a moment to reset for another attack. </p>
-<p><em>暈眩 (Stun)</em>: When you attack with it, it does stun damage instead of normal damage. </p>
-<p><em>投擲 (Thrown)</em>: Throw it at someone to hurt them. If you volley with this weapon, you can’t choose to mark off ammo on a 7–9; once you throw it, it’s gone until you can recover it. </p>
+<p><tag>n 彈藥 (n Ammo)</tag>: It counts as ammunition for appropriate ranged weapons. The number indicated does not represent individual arrows or sling stones, but represents what you have left on hand. </p>
+<p><tag>擊退 (Forceful)</tag>: It can knock someone back a pace, maybe even off their feet. </p>
+<p><tag>+n 傷害 (+n Damage)</tag>: It is particularly harmful to your enemies. When you deal damage, you add <em>n</em> to it.</p>
+<p><tag>無視護甲 (Ignores Armor)</tag>: Don’t subtract armor from the damage taken.</p>
+<p><tag>破壞性 (Messy)</tag>: It does damage in a particularly destructive way, ripping people and things apart.</p>
+<p><tag>n 穿透(n Piercing)</tag>: It goes right through armor. When you deal damage with <em>n</em> piercing, you subtract <em>n</em> from the enemy’s armor for that attack.</p>
+<p><tag>靈巧 (Precise)</tag>: It rewards careful strikes. You use DEX to hack and slash with this weapon, not STR.</p>
+<p><tag>裝填 (Reload)</tag>: After you attack with it, it takes more than a moment to reset for another attack. </p>
+<p><tag>暈眩 (Stun)</tag>: When you attack with it, it does stun damage instead of normal damage. </p>
+<p><tag>投擲 (Thrown)</tag>: Throw it at someone to hurt them. If you volley with this weapon, you can’t choose to mark off ammo on a 7–9; once you throw it, it’s gone until you can recover it. </p>
 <p>Weapons have tags to indicate the range at which they are useful. Dungeon World doesn’t inflict penalties or grant bonuses for “optimal range” or the like, but if your weapon says Hand and an enemy is ten yards away, a player would have a hard time justifying using that weapon against him.</p>
-<p><em>觸及 (Hand)</em>: It’s useful for attacking something within your reach, no further.</p>
-<p><em>近身 (Close)</em>: It’s useful for attacking something at arm’s reach plus a foot or two.</p>
-<p><em>延伸 (Reach)</em>: It’s useful for attacking something that’s several feet away—maybe as far as ten. </p>
-<p><em>短程 (Near)</em>: It’s useful for attacking if you can see the whites of their eyes. </p>
-<p><em>遠程 (Far)</em>: It’s useful for attacking something in shouting distance.</p>
+<p><tag>觸及 (Hand)</tag>: It’s useful for attacking something within your reach, no further.</p>
+<p><tag>近身 (Close)</tag>: It’s useful for attacking something at arm’s reach plus a foot or two.</p>
+<p><tag>及遠 (Reach)</tag>: It’s useful for attacking something that’s several feet away—maybe as far as ten. </p>
+<p><tag>短程 (Near)</tag>: It’s useful for attacking if you can see the whites of their eyes. </p>
+<p><tag>遠程 (Far)</tag>: It’s useful for attacking something in shouting distance.</p>
 <h3>武器列表</h3>
 <p>The stats below are for typical items. There are, of course, variations. A dull long sword might be -1 damage instead while a masterwork dagger could be +1 damage. Consider the following to be stats for  typical weapons of their type—a specific weapon could have different tags to represent its features.</p>
 <p class="Item">劣質弓	<span class="Tags">短程, 15 金幣, 2 重量</span></p>
@@ -163,9 +163,9 @@
 <p class="Item">匕首, 彈簧刀, 小刀	<span class="Tags">觸及, 2 金幣, 1 重量</span></p>
 <p class="Item">飛刀	<span class="Tags">投擲, 短程, 1 金幣, 0 重量</span></p>
 <p class="Item">短劍, 斧頭, 戰鎚, 釘頭鎚	<span class="Tags">近身, 8 金幣, 1 重量</span></p>
-<p class="Item">長矛	<span class="Tags">延伸, 投擲, 短程, 5 金幣, 1 重量</span></p>
+<p class="Item">長矛	<span class="Tags">及遠, 投擲, 短程, 5 金幣, 1 重量</span></p>
 <p class="Item">長劍, 戰斧, 連枷	<span class="Tags">近身, +1 傷害, 15 金幣, 2 重量</span></p>
-<p class="Item">斧槍	<span class="Tags">延伸, +1 傷害, 雙手, 9 金幣, 2 重量</span></p>
+<p class="Item">斧槍	<span class="Tags">及遠, +1 傷害, 雙手, 9 金幣, 2 重量</span></p>
 <p class="Item">刺劍	<span class="Tags">近身, 靈巧, 25 金幣, 1 重量</span></p>
 <p class="Item">決鬥刺劍	<span class="Tags">近身, 1 穿透, 靈巧, 50 金幣, 2 重量</span></p>
 <hr/>
@@ -173,14 +173,14 @@
 <p class="NoIndent">Armor is heavy, difficult to wear and is damned uncomfortable. Some classes are better trained to ignore these drawbacks, but anyone can strap on a suit of armor and enjoy the benefits it grants.</p>
 <h3>防具標籤</h3>
 <p class="NoIndent">Armor, like weapons, has tags. Some are purely descriptive but the ones below have some mechanical effect on the player wearing them</p>
-<p><em>n Armor</em>: It protects you from harm and absorbs damage. When you take damage, subtract your armor from the total. If you have more than one item with <em>n Armor</em>, only the highest value counts. </p>
-<p><em>+n Armor</em>: It protects you and stacks with other armor. Add its value to your total armor.</p>
-<p><em>Clumsy</em>: It’s tough to move around with. -1 ongoing while using it. This penalty is cumulative.</p>
+<p><tag>n 護甲 (n Armor)</tag>: It protects you from harm and absorbs damage. When you take damage, subtract your armor from the total. If you have more than one item with <em>n Armor</em>, only the highest value counts. </p>
+<p><tag>+n 護甲 (+n Armor)</tag>: It protects you and stacks with other armor. Add its value to your total armor.</p>
+<p><tag>笨重 (Clumsy)</tag>: It’s tough to move around with. -1 ongoing while using it. This penalty is cumulative.</p>
 <h3>防具列表</h3>
-<p class="Item">皮甲, 鏈甲	<span class="Tags">1 armor, worn, 10 金幣, 1 重量</span></p>
-<p class="Item">鱗甲	<span class="Tags">2 armor, worn, clumsy, 50 金幣, 3 重量</span></p>
-<p class="Item">板甲	<span class="Tags">3 armor, worn, clumsy, 350 金幣, 4 重量</span></p>
-<p class="Item">盾牌	<span class="Tags">+1 armor, 15 金幣, 2 重量</span></p>
+<p class="Item">皮甲, 鏈甲	<span class="Tags">1 護甲, 穿戴, 10 金幣, 1 重量</span></p>
+<p class="Item">鱗甲	<span class="Tags">2 護甲, 穿戴, 笨重, 50 金幣, 3 重量</span></p>
+<p class="Item">板甲	<span class="Tags">3 護甲, 穿戴, 笨重, 350 金幣, 4 重量</span></p>
+<p class="Item">盾牌	<span class="Tags">+1 護甲, 15 金幣, 2 重量</span></p>
 <hr/>
 <h2>地城裝備(Dungeon Gear)</h2>
 <p class="Item">探險工具組	<span class="Tags">5 使用次數, 20 金幣, 1 重量</span></p>
