--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -76,7 +76,7 @@
      <ul class="dropdown-menu">
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/overview">總覽</a></li>
        <li class="divider"></li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴住民</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴居族</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/folk">王國住民</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
@@ -134,27 +134,27 @@
 <h3>Monsters Without Stats</h3>
 <p class="NoIndent">Some creatures operate on a scale so far beyond the mortal that concepts like HP, armor, and damage just do not hold. Some creatures just aren’t dangerous in a fight. These creatures may still cause problems for the players and may even be defeated with clever thinking and enough preparation.</p>
 <p>If a creature is of such a scale far beyond the players, or if it just doesn’t put up a physical fight, don’t assign it HP, damage, or armor. You can still use the monster creation rules to give it tags. The core of a stat-less monster is its instinct and moves; you can have it make its moves and act according to its instinct even without numeric stats.</p>
-<h2>Monster Tags</h2>
-<p class="NoIndent"><em>Magical</em>: It is by nature magical through and through.</p>
-<p class="NoIndent"><em>Devious</em>: Its main danger lies beyond the simple clash of battle.</p>
-<p class="NoIndent"><em>Amorphous</em>: Its anatomy and organs are bizarre and unnatural.</p>
-<p class="NoIndent"><em>Organized</em>: It has a group structure that aids it in survival. Defeating one may cause the wrath of others. One may sound an alarm.</p>
-<p class="NoIndent"><em>Intelligent</em>: It’s smart enough that some individuals pick up other skills. The GM can adapt the monster by adding tags to reflect specific training, like a mage or warrior.</p>
-<p class="NoIndent"><em>Hoarder</em>: It almost certainly has treasure.</p>
-<p class="NoIndent"><em>Stealthy</em>: It can avoid detection and prefers to attack with the element of surprise.</p>
-<p class="NoIndent"><em>Terrifying</em>: Its presence and appearance evoke fear.</p>
-<p class="NoIndent"><em>Cautious</em>: It prizes survival over aggression.</p>
-<p class="NoIndent"><em>Construct</em>: It was made, not born</p>
-<p class="NoIndent"><em>Planar</em>: It’s from beyond this world</p>
-<h3>Organization Tags</h3>
-<p class="NoIndent"><em>Horde</em>: Where there’s one, there’s more. A lot more.</p>
-<p class="NoIndent"><em>Group</em>: Usually seen in small numbers, 3–6 or so.</p>
-<p class="NoIndent"><em>Solitary</em>: It lives and fights alone.</p>
-<h3>Size Tags</h3>
-<p class="NoIndent"><em>Tiny</em>: It’s much smaller than a halfling.</p>
-<p class="NoIndent"><em>Small</em>: It’s about halfling size.</p>
-<p class="NoIndent"><em>Large</em>: It’s much bigger than a human, about as big as a cart.</p>
-<p class="NoIndent"><em>Huge</em>: It’s as big as a small house or larger.</p>
+<h2>怪物標籤 (Monster Tags)</h2>
+<p class="NoIndent"><tag>魔法 (Magical)</tag>: It is by nature magical through and through.</p>
+<p class="NoIndent"><tag>狡猾 (Devious)</tag>: Its main danger lies beyond the simple clash of battle.</p>
+<p class="NoIndent"><tag>不定型 (Amorphous)</tag>: Its anatomy and organs are bizarre and unnatural.</p>
+<p class="NoIndent"><tag>組織 (Organized)</tag>: It has a group structure that aids it in survival. Defeating one may cause the wrath of others. One may sound an alarm.</p>
+<p class="NoIndent"><tag>智能 (Intelligent)</tag>: It’s smart enough that some individuals pick up other skills. The GM can adapt the monster by adding tags to reflect specific training, like a mage or warrior.</p>
+<p class="NoIndent"><tag>囤財者 (Hoarder)</tag>: It almost certainly has treasure.</p>
+<p class="NoIndent"><tag>隱匿 (Stealthy)</tag>: It can avoid detection and prefers to attack with the element of surprise.</p>
+<p class="NoIndent"><tag>駭人 (Terrifying)</tag>: Its presence and appearance evoke fear.</p>
+<p class="NoIndent"><tag>謹慎 (Cautious)</tag>: It prizes survival over aggression.</p>
+<p class="NoIndent"><tag>構裝體 (Construct)</tag>: It was made, not born</p>
+<p class="NoIndent"><tag>異位面 (Planar)</tag>: It’s from beyond this world</p>
+<h3>群集標籤 (Organization Tags)</h3>
+<p class="NoIndent"><tag>成群 (Horde)</tag>: Where there’s one, there’s more. A lot more.</p>
+<p class="NoIndent"><tag>集團 (Group)</tag>: Usually seen in small numbers, 3–6 or so.</p>
+<p class="NoIndent"><tag>單獨 (Solitary)</tag>: It lives and fights alone.</p>
+<h3>體型標籤 (Size Tags)</h3>
+<p class="NoIndent"><tag>微型 (Tiny)</tag>: 牠比半身人還要再小很多。</p>
+<p class="NoIndent"><tag>小型 (Small)</tag>: 牠有著與半身人差不多的體型。</p>
+<p class="NoIndent"><tag>大型 (Large)</tag>: 牠比人類要大上許多，差不多跟馬車一樣大。</p>
+<p class="NoIndent"><tag>巨型 (Huge)</tag>: 牠和一棟小房子一樣大，或甚至還要再更大。</p>
 <h2>Making Monsters</h2>
 <p class="NoIndent">Monsters start with your description of them. Whether you’re making the monster before play or just as the players come face-to-face with it, every monster starts with a clear vision of what it is and what it does.</p>
 <p>If you’re making a monster between sessions start by imagining it. Imagine what it looks like, what it does, why it stands out. Imagine the stories told about it and what effects it has had on the world.</p>
