--- a/classes/bard/index.html
+++ b/classes/bard/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>The Bard | 地城世界 HTML SRD</title>
+  <title>吟遊詩人 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,7 +76,7 @@
      <ul class="dropdown-menu">
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/overview">總覽</a></li>
        <li class="divider"></li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴住民</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/caverns">洞穴居族</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/folk">王國住民</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
@@ -109,37 +109,42 @@
     <div class="container">
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
-             <h1>The Bard</h1>
-<div id="intro"><p class="NoIndent">The poems say an adventurer’s life is all open roads and the glory of coin and combat. The tales told in every farmhand-filled inn have to have some ring of truth to them, don’t they? The songs to inspire peasantry and royals alike—to soothe the savage beast or drive men to a frenzy—have to come from somewhere.</p>
-<p>Enter the bard. You, with your smooth tongue and quick wit. You teller-of-tales and singer-of-songs. It takes a mere minstrel to retell a thing but a true bard to live it. Strap on your boots, noble orator. Sharpen that hidden dagger and take up the call. Someone’s got to be there, fighting shoulder-to-shoulder with the goons and the thugs and the soon-to-be-heroes. Who better than you to write the tale of your own heroism?</p>
-<p>Nobody. Get going.</p></div>
-<h2>Names</h2>
-<div id="names"><p class="NoIndent"><em>Elf</em>: Astrafel, Daelwyn, Feliana, Damarra, Sistranalle, Pendrell, Melliandre, Dagoliir</p> 
-<p class="NoIndent"><em>Human</em>: Baldric, Leena, Dunwick, Willem, Edwyn, Florian, Seraphine, Quorra, Charlotte, Lily, Ramonde, Cassandra</p></div>
-<h2>Look</h2>
-<div id="look"><p class="NoIndent">Choose one for each:</p>
-<p class="NoIndent">Knowing Eyes, Fiery Eyes, or Joyous Eyes</p>
-<p class="NoIndent">Fancy Hair, Wild Hair, or Stylish Cap</p>
-<p class="NoIndent">Finery, Traveling Clothes, or Poor Clothes</p>
-<p class="NoIndent">Fit Body, Well-fed Body, or Thin Body</p></div>
-<h2>Stats</h2>
-<p class="NoIndent">Your maximum HP is 6+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d6</span>.</p>
-<h2>Starting Moves</h2>
-<div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><h3 class="MoveName">Elf</h3>
-<p class="NoIndent">When you enter an important location (your call) you can ask the GM for one fact from the history of that location.</p>
-<h3 class="MoveName">Human</h3>
-<p class="NoIndent">When you first enter a civilized settlement someone who respects the custom of hospitality to minstrels will take you in as their guest.</p></div>
-<div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<h3 class="BasicMoveName">Arcane Art</h3>
+             <h1>吟遊詩人</h1>
+<div id="intro"><p class="NoIndent">冒險者之詩乃是不斷向前之路，是錢幣與戰鬥的榮光。在那些鄉農滿座的酒館中被傳唱的故事，總有些許真實，對吧？那些鼓舞農民與國親的歌謠──那些撫慰野獸或讓人瘋狂的歌謠──必定其來有自。</p>
+<p>當個詩人吧。來，帶著你的巧舌與機智。你說故事，你唱歌謠。一名尋常樂手只會複誦，而真正的吟遊詩人活在其中。繫上你的靴子吧，高貴的演說家。磨利那把小刀，接受呼喚。總得有人要與那些暴徒、惡棍與即將成為英雄的人們並肩作戰。又有誰比你更能傳誦自己的英雄故事？</p>
+<p>沒有別人了。來吧。</p></div>
+<hr/>
+<h2>名稱 (Names)</h2>
+<div id="names"><p class="NoIndent"><em>精靈</em>: Astrafel, Daelwyn, Feliana, Damarra, Sistranalle, Pendrell, Melliandre, Dagoliir</p> 
+<p class="NoIndent"><em>人類</em>: Baldric, Leena, Dunwick, Willem, Edwyn, Florian, Seraphine, Quorra, Charlotte, Lily, Ramonde, Cassandra</p></div>
+<hr/>
+<h2>外觀 (Look)</h2>
+<div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
+<ul><li>Knowing Eyes, Fiery Eyes, or Joyous Eyes</li>
+<li>Fancy Hair, Wild Hair, or Stylish Cap</li>
+<li>Finery, Traveling Clothes, or Poor Clothes</li>
+<li>Fit Body, Well-fed Body, or Thin Body</li></ul></div>
+<hr/>
+<h2>屬性數值 (Stats)</h2>
+<p class="NoIndent">你的最大生命值為 6+體質。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d6</span>。</p>
+<hr/>
+<h2>起始動作 (Starting Moves)</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
+<div id="racialmoves">
+<div class="Move"><h3 class="MoveName">精靈</h3>
+<p class="NoIndent">When you enter an important location (your call) you can ask the GM for one fact from the history of that location.</p></div>
+<div class="Move"><h3 class="MoveName">人類</h3>
+<p class="NoIndent">When you first enter a civilized settlement someone who respects the custom of hospitality to minstrels will take you in as their guest.</p></div></div>
+<div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
+<div class="Move"><h3 class="BasicMoveName">Arcane Art</h3>
 <p class="NoIndent">When you <strong>weave a performance into a basic spell</strong>, choose an ally and an effect:</p>
 <ul><li>Heal 1d8 damage</li>
 <li>+1d4 forward to damage</li>
 <li>Their mind is shaken clear of one enchantment</li>
 <li>The next time someone successfully assists the target with aid, they get +2 instead of +1</li></ul>
-<p class="NoIndent">Then roll+Cha. ✴On a 10+, the ally gets the selected effect. ✴On a 7-9, your spell still works, but you draw unwanted attention or your magic reverberates to other targets affecting them as well, GM’s choice.</p>
-<h3 class="BasicMoveName">Bardic Lore</h3>
+<p class="NoIndent">Then roll+Cha. ✴On a 10+, the ally gets the selected effect. ✴On a 7-9, your spell still works, but you draw unwanted attention or your magic reverberates to other targets affecting them as well, GM’s choice.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Bardic Lore</h3>
 <p class="NoIndent">Choose an area of expertise:</p>
 <ul><li>Spells and Magicks</li>
 <li>The Dead and Undead</li>
@@ -148,25 +153,27 @@
 <li>The Planar Spheres</li>
 <li>Legends of Heroes Past</li>
 <li>Gods and Their Servants</li></ul>
-<p class="NoIndent">When you <strong>first encounter an important creature, location, or item (your call) covered by your bardic lore</strong> you can ask the GM any one question about it; the GM will answer truthfully. The GM may then ask you what tale, song, or legend you heard that information in.</p>
-<h3 class="BasicMoveName">Charming and Open</h3>
+<p class="NoIndent">When you <strong>first encounter an important creature, location, or item (your call) covered by your bardic lore</strong> you can ask the GM any one question about it; the GM will answer truthfully. The GM may then ask you what tale, song, or legend you heard that information in.</p></div>
+<div class="Move"><h3 class="BasicMoveName">Charming and Open</h3>
 <p class="NoIndent">When you <strong>speak frankly with someone</strong>, you can ask their player a question from the list below. They must answer it truthfully, then they may ask you a question from the list (which you must answer truthfully).</p>
 <ul><li>Whom do you serve?</li>
 <li>What do you wish I would do?</li>
 <li>How can I get you to ______?</li>
 <li>What are you really feeling right now?</li>
-<li>What do you most desire?</li></ul>
-<h3 class="BasicMoveName">A Port in the Storm</h3>
-<p class="NoIndent">When you <strong>return to a civilized settlement you’ve visited before</strong>, tell the GM when you were last here. They’ll tell you how it’s changed since then.</p></div></div>
-<h2>Alignment</h2>
-<p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><h3 class="MoveName">Good</h3>
-<p class="NoIndent">Perform your art to aid someone else.</p>
-<h3 class="MoveName">Neutral</h3>
-<p class="NoIndent">Avoid a conflict or defuse a tense situation.</p>
-<h3 class="MoveName">Chaotic</h3>
-<p class="NoIndent">Spur others to significant and unplanned decisive action.</p></div>
-<h2>Gear</h2>
+<li>What do you most desire?</li></ul></div>
+<div class="Move"><h3 class="BasicMoveName">A Port in the Storm</h3>
+<p class="NoIndent">When you <strong>return to a civilized settlement you’ve visited before</strong>, tell the GM when you were last here. They’ll tell you how it’s changed since then.</p></div></div></div>
+<hr/>
+<h2>陣營 (Alignment)</h2>
+<p class="InstructionsAfterHeader">選擇一個陣營：</p>
+<div id="alignment"><div class="Move"><h3 class="MoveName">善良</h3>
+<p class="NoIndent">Perform your art to aid someone else.</p></div>
+<div class="Move"><h3 class="MoveName">中立</h3>
+<p class="NoIndent">Avoid a conflict or defuse a tense situation.</p></div>
+<div class="Move"><h3 class="MoveName">混亂</h3>
+<p class="NoIndent">Spur others to significant and unplanned decisive action.</p></div></div>
+<hr/>
+<h2>裝備 (Gear)</h2>
 <div id="gear"><p class="NoIndent">Your load is 9+Str. You have dungeon rations (5 uses, 1 weight). Choose one instrument, all are 0 weight for you:</p>
 <ul><li class="Option">Your father’s mandolin, repaired</li>
 <li class="Option">A fine lute, a gift from a noble</li>
@@ -185,7 +192,8 @@
 <li>Bandages (0 weight)</li>
 <li>Halfling pipeleaf (0 weight)</li>
 <li>3 coins</li></ul></div>
-<h2>Bonds</h2>
+<hr/>
+<h2>羈絆 (Bonds)</h2>
 <div id="bonds"><p class="NoIndent">Fill in the name of one of your companions in at least one:</p>
 <p>This is not my first adventure with _______________.</p>
 <p>I sang stories of _______________ long before I ever met them in person.</p>
@@ -193,56 +201,57 @@
 <p>I am writing a ballad about the adventures of _______________.</p>
 <p>_______________ trusted me with a secret.</p>
 <p>_______________ does not trust me, and for good reason.</p></div>
-<h2>Advanced Moves</h2>
-<div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2-5, choose from these moves.</p>
-<h3 class="MoveName">Healing Song</h3>
-<p class="NoIndent">When you <strong>heal with arcane art</strong>, you heal +1d8 damage.</p>
-<h3 class="MoveName">Vicious Cacophony</h3>
-<p class="NoIndent">When you <strong>grant bonus damage with arcane art</strong>, you grant an extra +1d4 damage.</p>
-<h3 class="MoveName">It Goes To Eleven</h3>
-<p class="NoIndent">When you <strong>unleash a crazed performance</strong> (a righteous lute solo or mighty brass blast, maybe) choose a target who can hear you and roll+Cha. ✴On a 10+ the target attacks their nearest ally in range. ✴On a 7–9 they attack their nearest ally, but you also draw their attention and ire.</p>
-<h3 class="MoveName">Metal Hurlant</h3>
-<p class="NoIndent">When you <strong>shout with great force or play a shattering note</strong> choose a target and roll+Con. ✴On a 10+ the target takes 1d10 damage and is deafened for a few minutes. ✴On a 7–9 you still damage your target, but it’s out of control: the GM will choose an additional target nearby.</p>
-<h3 class="MoveName">A Little Help From My Friends</h3>
-<p class="NoIndent">When you <strong>successfully aid someone</strong> you take +1 forward as well.</p>
-<h3 class="MoveName">Eldritch Tones</h3>
-<p class="NoIndent">Your arcane art is strong, allowing you to choose two effects instead of one.</p>
-<h3 class="MoveName">Duelist’s Parry</h3>
-<p class="NoIndent">When you hack and slash, you take +1 armor forward.</p>
-<h3 class="MoveName">Bamboozle</h3>
-<p class="NoIndent">When you <strong>parley with someone</strong>, on a 7+ you also take +1 forward with them.</p>
-<h3 class="MoveName">Multiclass Dabbler</h3>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p>
-<h3 class="MoveName">Multiclass Initiate</h3>
-<p class="Requirement">Requires: Multiclass Dabbler</p>
-<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p>
-<p class="Instructions">When you gain a level from 6-10, choose from these moves or the level 2-5 moves.</p>
-<h3 class="MoveName">Healing Chorus</h3>
-<p class="Requirement">Replaces: Healing Song</p>
-<p class="NoIndent">When you <strong>heal with arcane art</strong>, you heal +2d8 damage.</p>
-<h3 class="MoveName">Vicious Blast</h3>
-<p class="Requirement">Replaces: Vicious Cacophony</p>
-<p class="NoIndent">When you <strong>grant bonus damage with arcane art</strong>, you grant an extra +2d4 damage.</p>
-<h3 class="MoveName">Unforgettable Face</h3>
-<p class="NoIndent">When you <strong>meet someone you’ve met before</strong> (your call) after some time apart you take +1 forward against them.</p>
-<h3 class="MoveName">Reputation</h3>
-<p class="NoIndent">When you <strong>first meet someone who’s heard songs about you</strong>, roll+Cha. ✴On a 10+, tell the GM two things they’ve heard about you. ✴On a 7-9, tell the GM one thing they’ve heard, and the GM tells you one thing.</p>
-<h3 class="MoveName">Eldritch Chord</h3>
-<p class="Requirement">Replaces: Eldritch Tones</p>
-<p class="NoIndent">When you use arcane art, you choose two effects. You also get to choose one of those effects to double.</p>
-<h3 class="MoveName">An Ear For Magic</h3>
-<p class="NoIndent">When you <strong>hear an enemy cast a spell</strong> the GM will tell you the name of the spell and its effects. Take +1 forward when acting on the answers.</p>
-<h3 class="MoveName">Devious</h3>
-<p class="NoIndent">When you use charming and open you may also ask “How are you vulnerable to me?” Your subject may not ask this question of you.</p>
-<h3 class="MoveName">Duelist’s Block</h3>
-<p class="Requirement">Replaces: Duelist’s Parry</p>
-<p class="NoIndent">When you hack and slash, you take +2 armor forward.</p>
-<h3 class="MoveName">Con</h3>
-<p class="Requirement">Replaces: Bamboozle</p>
-<p class="NoIndent">When you <strong>parley with someone</strong>, on a 7+ you also take +1 forward with them and get to ask their player one question which they must answer truthfully.</p>
-<h3 class="MoveName">Multiclass Master</h3>
-<p class="Requirement">Requires: Multiclass Initiate</p>
+<hr/>
+<h2>進階動作 (Advanced Moves)</h2>
+<div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
+<div class="Move"><h3 class="MoveName">Healing Song</h3>
+<p class="NoIndent">When you <strong>heal with arcane art</strong>, you heal +1d8 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Vicious Cacophony</h3>
+<p class="NoIndent">When you <strong>grant bonus damage with arcane art</strong>, you grant an extra +1d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">It Goes To Eleven</h3>
+<p class="NoIndent">When you <strong>unleash a crazed performance</strong> (a righteous lute solo or mighty brass blast, maybe) choose a target who can hear you and roll+Cha. ✴On a 10+ the target attacks their nearest ally in range. ✴On a 7–9 they attack their nearest ally, but you also draw their attention and ire.</p></div>
+<div class="Move"><h3 class="MoveName">Metal Hurlant</h3>
+<p class="NoIndent">When you <strong>shout with great force or play a shattering note</strong> choose a target and roll+Con. ✴On a 10+ the target takes 1d10 damage and is deafened for a few minutes. ✴On a 7–9 you still damage your target, but it’s out of control: the GM will choose an additional target nearby.</p></div>
+<div class="Move"><h3 class="MoveName">A Little Help From My Friends</h3>
+<p class="NoIndent">When you <strong>successfully aid someone</strong> you take +1 forward as well.</p></div>
+<div class="Move"><h3 class="MoveName">Eldritch Tones</h3>
+<p class="NoIndent">Your arcane art is strong, allowing you to choose two effects instead of one.</p></div>
+<div class="Move"><h3 class="MoveName">Duelist’s Parry</h3>
+<p class="NoIndent">When you hack and slash, you take +1 armor forward.</p></div>
+<div class="Move"><h3 class="MoveName">Bamboozle</h3>
+<p class="NoIndent">When you <strong>parley with someone</strong>, on a 7+ you also take +1 forward with them.</p></div>
+<div class="Move"><h3 class="MoveName">Multiclass Dabbler</h3>
 <p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
+<div class="Move"><h3 class="MoveName">Multiclass Initiate</h3>
+<p class="Requirement">Requires: Multiclass Dabbler</p>
+<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div>
+<p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
+<div class="Move"><h3 class="MoveName">Healing Chorus</h3>
+<p class="Requirement">Replaces: Healing Song</p>
+<p class="NoIndent">When you <strong>heal with arcane art</strong>, you heal +2d8 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Vicious Blast</h3>
+<p class="Requirement">Replaces: Vicious Cacophony</p>
+<p class="NoIndent">When you <strong>grant bonus damage with arcane art</strong>, you grant an extra +2d4 damage.</p></div>
+<div class="Move"><h3 class="MoveName">Unforgettable Face</h3>
+<p class="NoIndent">When you <strong>meet someone you’ve met before</strong> (your call) after some time apart you take +1 forward against them.</p></div>
+<div class="Move"><h3 class="MoveName">Reputation</h3>
+<p class="NoIndent">When you <strong>first meet someone who’s heard songs about you</strong>, roll+Cha. ✴On a 10+, tell the GM two things they’ve heard about you. ✴On a 7-9, tell the GM one thing they’ve heard, and the GM tells you one thing.</p></div>
+<div class="Move"><h3 class="MoveName">Eldritch Chord</h3>
+<p class="Requirement">Replaces: Eldritch Tones</p>
+<p class="NoIndent">When you use arcane art, you choose two effects. You also get to choose one of those effects to double.</p></div>
+<div class="Move"><h3 class="MoveName">An Ear For Magic</h3>
+<p class="NoIndent">When you <strong>hear an enemy cast a spell</strong> the GM will tell you the name of the spell and its effects. Take +1 forward when acting on the answers.</p></div>
+<div class="Move"><h3 class="MoveName">Devious</h3>
+<p class="NoIndent">When you use charming and open you may also ask “How are you vulnerable to me?” Your subject may not ask this question of you.</p></div>
+<div class="Move"><h3 class="MoveName">Duelist’s Block</h3>
+<p class="Requirement">Replaces: Duelist’s Parry</p>
+<p class="NoIndent">When you hack and slash, you take +2 armor forward.</p></div>
+<div class="Move"><h3 class="MoveName">Con</h3>
+<p class="Requirement">Replaces: Bamboozle</p>
+<p class="NoIndent">When you <strong>parley with someone</strong>, on a 7+ you also take +1 forward with them and get to ask their player one question which they must answer truthfully.</p></div>
+<div class="Move"><h3 class="MoveName">Multiclass Master</h3>
+<p class="Requirement">Requires: Multiclass Initiate</p>
+<p class="NoIndent">Get one move from another class. Treat your level as one lower for choosing the move.</p></div></div>
 
           </div>
        </div>
